# playstation_store_2020_oct_scrape

./: README.md  cli.py  pyproject.toml
cloud_init_scripts/: bootstrap_wpull.py  script_inside_cloudinit_yaml.py
playstation_store_2020_oct_scrape/: create_config_and_instances.py  generate_wpull_urls_from_content_ids.py  get_cloudinit_files.py  get_errored_items_from_log.py  main.py  model.py  rsync_files_from_droplets.py  scrape.py  scrape_media.py  warcio_scrape.py
tests/: test_playstation_store_2020_oct_scrape.py
wpull_plugins/: ps_store_json_api_wpull_plugin.py
