[tool.poetry]
name = "playstation_store_2020_oct_scrape"
version = "0.1.0"
description = "scrape the store.playstation.com site"
authors = ["Mark Grandi <markgrandi@gmail.com>"]

# make sure the wpull plugins + cloud init scripts are included in the wheel
# (and therefore the PEX)
include = [
    "wpull_plugins/ps_store_json_api_wpull_plugin.py",
    "cloud_init_scripts/bootstrap_wpull.py",
    "cloud_init_scripts/script_inside_cloudinit_yaml.py"]

[tool.poetry.dependencies]
python = "^3.8"
arrow = "^0.17.0"
attrs = "^20.2.0"
logging_tree = "^1.8.1"
requests = "^2.24.0"
beautifulsoup4 = "^4.9.3"
warcio = "^1.7.4"
python-digitalocean = "^1.15.0"
jmespath = "^0.10.0"
"ruamel.yaml" = "^0.16.12"
language-tags = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
psstore_cli = 'playstation_store_2020_oct_scrape.main:main'

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.masonry.api"
